--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 driverClasss=com.mysql.jdbc.Driver
 jdbcUrl=jdbc:mysql://localhost:3306/mylove?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 username=root
-password=7632785
+password=Fly7632785?
 
 #定义初始连接数
 initialSize=0
